...
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRepeticionesid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeticiones"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPesoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

...
