<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinner_ejercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_kilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_m_ximo_1rm_en_kg"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        style="@style/boton"
        android:layout_height="wrap_content"
        android:text="@string/guardar_peso"
        android:layout_marginBottom="24dp" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="16dp" />



</LinearLayout>
